# Liceu-Engine

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.agents/agents/: Codex.agent.md
.github/: copilot-instructions.md
docs/: architecture.md
engine/: __init__.py  __main__.py  engine.py
engine/analytics/: __init__.py  analyzer.py
engine/config/: __init__.py  settings.py
engine/core/: __init__.py  factory.py  interfaces.py  knowledge.py  repository.py  service.py  sqlite_repository.py
engine/events/: __init__.py  bus.py  events.py
engine/exceptions/: __init__.py  errors.py
engine/graph/: __init__.py  builder.py  edge.py  graph.py  node.py
engine/gui/: __init__.py  app.py  graph_window.py  main_window.py  utils.py
engine/logging/: logger.py
engine/parsers/: __init__.py  document.py  heading.py  (+4 more)
tests/: test_analyzer.py  test_backlinks.py  test_engine.py  test_engine_create_document.py  test_engine_graph_sync.py  test_engine_update_document.py  test_errors.py  test_events.py  test_front_matter.py  test_graph.py  test_graph_builder.py  test_gui_edit_document.py  test_gui_graph.py  test_gui_import.py  test_gui_menubar.py  test_gui_new_document.py  test_gui_preview.py  test_gui_unsaved.py  test_heading_parser.py  test_import_directory.py  test_knowledge.py  test_knowledge_factory.py  test_listing.py  test_logger.py  test_markdown_document.py  test_markdown_document_structure.py  test_markdown_parser.py  test_pipeline.py  test_related.py  test_search.py  test_service.py  test_sqlite_repository.py  test_statistics_panel.py  test_wikilink_parser.py
(+8 files in other folders)
