[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liceu-engine"
version = "0.1.0"
description = "A personal knowledge engineering engine for long-term learning and knowledge organization."
readme = "README.md"
requires-python = ">=3.14"
keywords = ["knowledge", "personal-knowledge", "learning", "engine"]
authors = [
  { name = "Liceu Engine" }
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Source" = "https://example.com/liceu-engine"
"Homepage" = "https://example.com/liceu-engine"
